# physical-ai-robotics

./: .gitignore  CLAUDE.md  PLAN-BOOK-ASSISTANT-FIXES.md  package-lock.json  package.json
.claude/agents/: chatkit-server-builder.md
.github/workflows/: deploy.yml  sync-content.yml  validate-content.yml
.specify/memory/: constitution.md
auth-service/: .env.example  CONFIGURATION_COMPLETE.md  OAUTH_SETUP.md  README.md  auth.ts  better-auth.config.ts  migrate.ts  package-lock.json  package.json  server.ts  tsconfig.json
backend/: .env  .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  book_assistant_agent.py  book_assistant_server.py  config.py  database.py  main.py  models.py  postgres_thread_store.py  qdrant_service.py  thread_item_converter.py  tools.py
backend/migrations/: 001_initial_schema.sql
backend/scripts/: index_book.py  setup_qdrant.py
book-source/: .env.example  docusaurus.config.ts  package-lock.json
book-source/docs/: chapter-index.md  preface-agent-native.md
context/: better-auth-integration-context.md  project_description.md
docs/: ri-architecture.md  storage-abstraction-research.md  universal-agent-workspace-architecture.md  visual-assets-storage-architecture.md
panaversity-fs/: .env.example  .gitignore
panaversity-fs/docs/: MCP-TOOLS.md  MIGRATION.md
panaversity-fs/scripts/: README.md  migrate_book_source.py
panaversity-fs/tests/: conftest.py
roboai/: .env.example  .gitignore  docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml
roboai/docs/: chapter-index.md
(+160 files in other folders)
